refactor diagram renderers